--- a/Derivative_Calculator.ipynb
+++ b/Derivative_Calculator.ipynb
@@ -6,7 +6,7 @@
       "name": "Derivative Calculator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXbhxe5cad2NN6S/Yc1yc5",
+      "authorship_tag": "ABX9TyPXS+GtnHMLvREGkXxzwoVn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,8 @@
         "id": "Lcmb5_yVSWjA"
       },
       "source": [
+        "### Gombosuren.A, MUST.\r\n",
+        "\r\n",
         "### Create A Derivative Calculator in Python\r\n",
         "\r\n",
         "One of the formal definitions of derivatives is"
