--- a/Derivative_Calculator.ipynb
+++ b/Derivative_Calculator.ipynb
@@ -6,7 +6,8 @@
       "name": "Derivative Calculator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXS+GtnHMLvREGkXxzwoVn"
+      "authorship_tag": "ABX9TyNl1OIxI3qiAeS377qaAy93",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Gombosuren/test/blob/main/Derivative_Calculator.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -35,14 +46,14 @@
       "source": [
         "$F = f(x)$\r\n",
         "\r\n",
-        "$\\displaystyle{F_x = \\frac{\\partial F}{\\partial x} = \\lim_{h\\to 0} \\frac{f(x+h)-f(x)}{h}}$\r\n",
+        "$\\displaystyle{F_x = \\frac{\\partial F}{\\partial x} \\approx \\lim_{h\\to 0} \\frac{f(x+h)-f(x)}{h}}$\r\n",
         "\r\n",
         "<br>\r\n",
         "<br>\r\n",
         "\r\n",
         "$F = f(x, y)$\r\n",
         "\r\n",
-        "$\\displaystyle{F_x = \\frac{\\partial F}{\\partial x} = \\lim_{h\\to 0} \\frac{f(x+h, y)-f(x, y)}{h}}$\r\n",
+        "$\\displaystyle{F_x = \\frac{\\partial F}{\\partial x} \\approx \\lim_{h\\to 0} \\frac{f(x+h, y)-f(x, y)}{h}}$\r\n",
         "\r\n"
       ]
     },
@@ -85,7 +96,7 @@
         "# for instance f_dx(2) = 12;\r\n",
         "print(\"x = 2; f = x**3; f_dx(x); result: \", f_dx(f, 2));"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +146,7 @@
         "# for instance f_dx(3, 4) = 8;\r\n",
         "print(\"x = 3; y = 4; f = 2*x*y; f_dx(x, y); result: \", f_dx(f, 3, 4));"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
