--- a/Derivative_Calculator.ipynb
+++ b/Derivative_Calculator.ipynb
@@ -6,8 +6,7 @@
       "name": "Derivative Calculator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNl1OIxI3qiAeS377qaAy93",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNl1OIxI3qiAeS377qaAy93"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Gombosuren/test/blob/main/Derivative_Calculator.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
