--- a/Euler_Method_for_solving_differential_equation.ipynb
+++ b/Euler_Method_for_solving_differential_equation.ipynb
@@ -6,7 +6,7 @@
       "name": "Euler Method for solving differential equation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMzZlrYR4k0QpbVDCD8EXzW"
+      "authorship_tag": "ABX9TyPVzYDVHZgrLirO5flEoAqH"
     },
     "kernelspec": {
       "name": "python3",
@@ -44,7 +44,7 @@
         "$$\\displaystyle{\r\n",
         "\\frac{\\partial y(t)}{\\partial t} = f(t, y(t))\r\n",
         "\\\\\r\n",
-        "y(t_{0})=y_{0}\r\n",
+        "\\displaystyle{y(t_{0})=y_{0}}\r\n",
         "\\\\\r\n",
         "\\frac{\\partial y(t)}{\\partial t}\\approx \\frac{y(t+h)-y(t)}{h}\r\n",
         "\\\\\r\n",
