--- a/Euler_Method_for_solving_differential_equation.ipynb
+++ b/Euler_Method_for_solving_differential_equation.ipynb
@@ -6,7 +6,7 @@
       "name": "Euler Method for solving differential equation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN6ETPBxdfWso1+p2pb+ovo"
+      "authorship_tag": "ABX9TyOxJk7uHTyIEn7RHm4YANt1"
     },
     "kernelspec": {
       "name": "python3",
@@ -41,24 +41,24 @@
         "id": "EMmmFABoU-Tg"
       },
       "source": [
-        "$$\\displaystyle{\r\n",
+        "$\\displaystyle{\r\n",
         "\\frac{\\partial y(t)}{\\partial t} = f(t, y(t))\r\n",
-        "}$$\r\n",
+        "}$\r\n",
         "\r\n",
-        "$$\\displaystyle{y(t_{0})=y_{0}\r\n",
-        "}$$\r\n",
+        "$\\displaystyle{y(t_{0})=y_{0}\r\n",
+        "}$\r\n",
         "\r\n",
-        "$$\\displaystyle{\\frac{\\partial y(t)}{\\partial t}\\approx \\frac{y(t+h)-y(t)}{h}\r\n",
-        "}$$\r\n",
+        "$\\displaystyle{\\frac{\\partial y(t)}{\\partial t}\\approx \\frac{y(t+h)-y(t)}{h}\r\n",
+        "}$\r\n",
         "\r\n",
-        "$$\\displaystyle{y(t+h)\\approx y(t)+h\\frac{\\partial y(t)}{\\partial t}\r\n",
-        "}$$\r\n",
+        "$\\displaystyle{y(t+h)\\approx y(t)+h\\frac{\\partial y(t)}{\\partial t}\r\n",
+        "}$\r\n",
         "\r\n",
-        "$$\\displaystyle{y(t+h) \\approx  y(t)+hf(t, y(t))\r\n",
-        "}$$\r\n",
+        "$\\displaystyle{y(t+h) \\approx  y(t)+hf(t, y(t))\r\n",
+        "}$\r\n",
         "\r\n",
-        "$$\\displaystyle{y_{n+1}=y_{n}+hf(t_{n}, y_{n})\r\n",
-        "}$$"
+        "$\\displaystyle{y_{n+1}=y_{n}+hf(t_{n}, y_{n})\r\n",
+        "}$"
       ]
     },
     {
