--- a/Derivative_Calculator.ipynb
+++ b/Derivative_Calculator.ipynb
@@ -6,7 +6,7 @@
       "name": "Derivative Calculator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNl1OIxI3qiAeS377qaAy93"
+      "authorship_tag": "ABX9TyNkz/ARMmu9E9U223F1w1tb"
     },
     "kernelspec": {
       "name": "python3",
@@ -22,9 +22,9 @@
       "source": [
         "### Gombosuren.A, MUST.\r\n",
         "\r\n",
-        "### Create A Derivative Calculator in Python\r\n",
+        "### Тухайн цэг дээрх уламжлалын тооцооллыг python хэл дээр хэрэгжүүлэх\r\n",
         "\r\n",
-        "One of the formal definitions of derivatives is"
+        "Уламжлалыг дараах байдлаар тодорхойлж болох юм."
       ]
     },
     {
@@ -52,9 +52,9 @@
         "id": "lRosQGF6q46C"
       },
       "source": [
-        "### Example 1\r\n",
+        "### Жишээ 1\r\n",
         "\r\n",
-        "1-D"
+        "1-D. Нэг хувьсагчтай функцийн уламжлалыг тооцоолох."
       ]
     },
     {
@@ -103,9 +103,9 @@
         "id": "YnHqA7C2rATP"
       },
       "source": [
-        "### Example 2\r\n",
+        "### Жишээ 2\r\n",
         "\r\n",
-        "2-D"
+        "2-D. Олон хувьсагчтай функцийн уламжлалыг тооцоолох."
       ]
     },
     {
@@ -145,6 +145,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0X7BthT90sCh"
+      },
+      "source": [
+        "### Баярлалаа. "
       ]
     }
   ]
