--- a/Euler_Method_for_solving_differential_equation.ipynb
+++ b/Euler_Method_for_solving_differential_equation.ipynb
@@ -6,7 +6,7 @@
       "name": "Euler Method for solving differential equation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOxJk7uHTyIEn7RHm4YANt1"
+      "authorship_tag": "ABX9TyNZ6UMnUUFBtgjHUsr7pyDH"
     },
     "kernelspec": {
       "name": "python3",
@@ -32,7 +32,11 @@
       "source": [
         "### Euler Method for solving ordinary differential equation (ODE)\r\n",
         "\r\n",
-        "The ODE has to be provided in the following form:"
+        "### Энгийн дифференциал тэгшитгэлийг шийдвэрлэх Эйлерийн арга\r\n",
+        "\r\n",
+        "Энгийн дифференциал тэгшитгэл ~ ordinary differential equation (ODE)\r\n",
+        "\r\n",
+        "ODE-ийг дараах хэлбэрээр тодорхойлж болох юм."
       ]
     },
     {
@@ -69,13 +73,16 @@
       "source": [
         "### Constant Rate of Change\r\n",
         "\r\n",
-        "If the dependent variable has a constant rate of change:\r\n",
+        "\r\n",
+        "Хэрэв хамааран хувьсагч нь тогтмол өөрчлөлтийн хурдтай байвал:\r\n",
+        "\r\n",
+        "Дараах тэгшитгэлийг зохиож болох юм.\r\n",
         "\r\n",
         "$$\\displaystyle{\r\n",
         "\\frac{\\partial y(t)}{\\partial t} = C\r\n",
         "}$$\r\n",
         "\r\n",
-        "where C is some constant, you can provide the differential equation in the f function and then calculate answers using this model with the code below. The code assumes there are 100 evenly spaced times between 0 and 10, the initial value of y is 6, and the rate of change is 1.2:"
+        "$y(t_{0})=6, хугацаа$ $0-$ээс эхлэж $10-$ мин хүртэл үргэлжилнэ. Ингэхдээ $100$ удаагын хугацааны өөрчлөлт явагдах юм. Өөрчлөлтийн хурд $1.2$ бол $y(t_{10})$ үеийн утгыг ойролцоогоор тооцоолж үзье.\r\n"
       ]
     },
     {
@@ -96,7 +103,7 @@
         "import numpy as np;\r\n",
         "import matplotlib.pyplot as plt;"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +137,7 @@
         "h = (time_upper-time_lower)/time_step;\r\n",
         "print(h);"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +182,7 @@
         "\r\n",
         "ODE_euler_method(f,6,0,10,0.1);"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,6 +192,15 @@
       },
       "source": [
         "#### Plot"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V9i3DSF3_9WO"
+      },
+      "source": [
+        "Хугацаанаас хамаарсан шулууны өөрчлөлт"
       ]
     },
     {
@@ -203,7 +219,7 @@
         "plt.ylabel('y(t)');\r\n",
         "plt.show();"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -228,13 +244,15 @@
       "source": [
         "### Population Growth\r\n",
         "\r\n",
-        "For population growth, the rate of change of population is dependent upon the number of people as well as some constant of proportionality:\r\n",
+        "Хүн амын өсөлтийн хувьд, хүн амын өөрчлөлтийн хэмжээ нь хүмүүсийн тооноос гадна пропорционал байдлын тогтмол хувьсагчаас хамаарна:\r\n",
+        "\r\n",
+        "Дараах тэгшитгэлийг зохиож болох юм.\r\n",
         "\r\n",
         "$$\\displaystyle{\r\n",
         "\\frac{\\partial y(t)}{\\partial t} = C \\cdot y\r\n",
         "}$$\r\n",
         "\r\n",
-        "where C is again some constant. The following code will calculate the population for a span of 3 seconds with 25 points for the population model above with an initial population of 10 and a constant of proportionality of 1.02:"
+        "$y(t_{0})=10, хугацаа$ $0-$ээс эхлэж $3-$ мин хүртэл үргэлжилнэ. Ингэхдээ $25$ удаагын хугацааны өөрчлөлт явагдах юм. Өөрчлөлтийн хурд $1.02$ бол $y(t_{3})$ үеийн утгыг ойролцоогоор тооцоолж үзье."
       ]
     },
     {
@@ -267,7 +285,7 @@
         "h = (time_upper-time_lower)/time_step;\r\n",
         "print(h);"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,7 +330,7 @@
         "\r\n",
         "ODE_euler_method(f,10,0,3,0.12);"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,6 +340,15 @@
       },
       "source": [
         "#### Plot"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E7r1fgWl_Zzf"
+      },
+      "source": [
+        "Хугацаанаас хамаарсан хүн амын өсөлтийн загварын муруй"
       ]
     },
     {
@@ -340,7 +367,7 @@
         "plt.ylabel('y(t)');\r\n",
         "plt.show();"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -363,7 +390,7 @@
         "id": "Znc4ZF06dlPA"
       },
       "source": [
-        "### Thank you so much\r\n"
+        "### Баярлалаа.\r\n"
       ]
     }
   ]
