--- a/Derivative_Calculator.ipynb
+++ b/Derivative_Calculator.ipynb
@@ -6,7 +6,7 @@
       "name": "Derivative Calculator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNkz/ARMmu9E9U223F1w1tb"
+      "authorship_tag": "ABX9TyNsOaE2/iUZz9dcsx5cE7uo"
     },
     "kernelspec": {
       "name": "python3",
@@ -21,6 +21,8 @@
       },
       "source": [
         "### Gombosuren.A, MUST.\r\n",
+        "\r\n",
+        "### Create A Derivative Calculator in Python\r\n",
         "\r\n",
         "### Тухайн цэг дээрх уламжлалын тооцооллыг python хэл дээр хэрэгжүүлэх\r\n",
         "\r\n",
