--- a/Practical_Application_of_the_Finite_Element_Method_(FEM).ipynb
+++ b/Practical_Application_of_the_Finite_Element_Method_(FEM).ipynb
@@ -6,7 +6,7 @@
       "name": "Practical Application of the Finite Element Method (FEM).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOYThaBePBfVS7P1yUxZcrW"
+      "authorship_tag": "ABX9TyMj/6zztT3Pv7Rfxd9qa6i/"
     },
     "kernelspec": {
       "name": "python3",
@@ -104,7 +104,7 @@
         "f = lambda x: 6*x - 2;\r\n",
         "print(\"x = 5, f(x), result: \", f(5));"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,10 +130,10 @@
         "$\\phi_{i},$ $1 \\leq i \\leq n-1$\r\n",
         "\r\n",
         "$\\phi_{i} = \\begin{cases} \r\n",
-        "0 & \\mbox{Хэрэв } x<x_{i−1}\r\n",
-        "\\\\ \\frac{x-x_{i-1}}{x_{i}-x_{i-1}} & \\mbox{Хэрэв } x_{i−1}<x<x_{i}\r\n",
-        "\\\\ \\frac{x_{i+1}-x}{x_{i+1}-x_{i}} & \\mbox{Хэрэв }  x_{i}<x<x_{i+1}\r\n",
-        "\\\\ 0 & \\mbox{Хэрэв } x>x_{i+1}\r\n",
+        "0 & \\text{Хэрэв }  x<x_{i−1}\r\n",
+        "\\\\ \\frac{x-x_{i-1}}{x_{i}-x_{i-1}} & \\text{Хэрэв } x_{i−1}<x<x_{i}\r\n",
+        "\\\\ \\frac{x_{i+1}-x}{x_{i+1}-x_{i}} & \\text{Хэрэв }   x_{i}<x<x_{i+1}\r\n",
+        "\\\\ 0 & \\text{Хэрэв } x>x_{i+1}\r\n",
         "\\end{cases}$"
       ]
     },
@@ -163,7 +163,7 @@
         "plt.ylabel(r'$\\phi_i(x)$');\r\n",
         "plt.show();"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
