--- a/Practical_Application_of_the_Finite_Element_Method_(FEM).ipynb
+++ b/Practical_Application_of_the_Finite_Element_Method_(FEM).ipynb
@@ -6,7 +6,7 @@
       "name": "Practical Application of the Finite Element Method (FEM).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyONfzFTO4b7RuGnFAI6ZP5X"
+      "authorship_tag": "ABX9TyOIquxrIDQZu3wxengOhtpq"
     },
     "kernelspec": {
       "name": "python3",
@@ -130,10 +130,10 @@
         "$\\phi_{i},$ $1 \\leq i \\leq n-1$\r\n",
         "\r\n",
         "$\\phi_{i} = \\begin{cases} \r\n",
-        "0 & \\text{Хэрэв } x<x_{i−1}\r\n",
-        "\\\\ \\frac{x-x_{i-1}}{x_{i}-x_{i-1}} & \\text{Хэрэв } x_{i−1}<x<x_{i}\r\n",
-        "\\\\ \\frac{x_{i+1}-x}{x_{i+1}-x_{i}} & \\text{Хэрэв } x_{i}<x<x_{i+1}\r\n",
-        "\\\\ 0 & \\text{Хэрэв } x>x_{i+1}\r\n",
+        "0 & \\text{Хэрэв } \\quad x<x_{i−1}\r\n",
+        "\\\\ \\frac{x-x_{i-1}}{x_{i}-x_{i-1}} & \\text{Хэрэв } \\quad x_{i−1}<x<x_{i}\r\n",
+        "\\\\ \\frac{x_{i+1}-x}{x_{i+1}-x_{i}} & \\text{Хэрэв } \\quad x_{i}<x<x_{i+1}\r\n",
+        "\\\\ 0 & \\text{Хэрэв } \\quad x>x_{i+1}\r\n",
         "\\end{cases}$"
       ]
     },
