--- a/Practical_Application_of_the_Finite_Element_Method_(FEM).ipynb
+++ b/Practical_Application_of_the_Finite_Element_Method_(FEM).ipynb
@@ -6,7 +6,7 @@
       "name": "Practical Application of the Finite Element Method (FEM).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMrgpg7mGquj9P9y29JPuRE"
+      "authorship_tag": "ABX9TyOXyW1uVGXEMbO808jB9DsR"
     },
     "kernelspec": {
       "name": "python3",
@@ -71,7 +71,9 @@
         "\r\n",
         "$u''=6x-2$\r\n",
         "\r\n",
-        "Магадгүй $u$ функц $u(x) = x^{3}-x^{2}$ бид төсөөллийн тооцоолол хийж болох юм.\r\n",
+        "$u$ функцийг ойролцоогоор тооцоолох нь бидний зорилго юм.\r\n",
+        "\r\n",
+        "Магадгүй $u$ функц $u(x) = x^{3}-x^{2}$ гэсэн төсөөллийн тооцоолол бид хийж болох юм.\r\n",
         "\r\n",
         "$x_{0}, ... , x_{n}$ цэгүүд үүсгэнэ."
       ]
@@ -178,6 +180,31 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EFIwoMBgkCEJ"
+      },
+      "source": [
+        "### Compute the stiffness matrix and mass vector\r\n",
+        "\r\n",
+        "$$\\int_\\Omega\\nabla u\\cdot \\nabla\\phi = \\int_\\Omega f \\phi$$\r\n",
+        "\r\n",
+        "$$u = \\sum_{j=1}^{n-1}\\vec{u}_j\\phi_j$$\r\n",
+        "\r\n",
+        "$\\int_\\Omega \\sum_{j=1}^{n-1} u_j \\nabla \\phi_j\\nabla\\phi_i = \\int_\\Omega f \\phi_i$\r\n",
+        "\r\n",
+        "$A\\vec{u} = \\vec{b}$\r\n",
+        "\r\n",
+        "$A_{ij} = \\int_\\Omega \\nabla \\phi_i\\nabla\\phi_j$\r\n",
+        "\r\n",
+        "$\\vec{b}_i= \\int_\\Omega f\\phi_i$\r\n",
+        "\r\n",
+        "$A_{ij} = \\int \\nabla \\phi_i\\nabla\\phi_j= \\int_0^1 \\phi_i'(x)\\phi_j'(x)dx= \\begin{cases}2/h & \\mbox{ if } i=j\\\\-1/h& \\mbox{ if } i = j\\pm 1\\\\ 0 & \\mbox{ else }\\end{cases}$\r\n",
+        "\r\n",
+        "#### Stiffness matrix\r\n"
       ]
     }
   ]
