--- a/Practical_Application_of_the_Finite_Element_Method_(FEM).ipynb
+++ b/Practical_Application_of_the_Finite_Element_Method_(FEM).ipynb
@@ -6,7 +6,7 @@
       "name": "Practical Application of the Finite Element Method (FEM).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXyW1uVGXEMbO808jB9DsR"
+      "authorship_tag": "ABX9TyPtwWmxodSTj0/F4FJBusz4"
     },
     "kernelspec": {
       "name": "python3",
@@ -192,7 +192,7 @@
         "\r\n",
         "$$\\int_\\Omega\\nabla u\\cdot \\nabla\\phi = \\int_\\Omega f \\phi$$\r\n",
         "\r\n",
-        "$$u = \\sum_{j=1}^{n-1}\\vec{u}_j\\phi_j$$\r\n",
+        "$u = \\sum_{j=1}^{n-1}\\vec{u}_j\\phi_j$\r\n",
         "\r\n",
         "$\\int_\\Omega \\sum_{j=1}^{n-1} u_j \\nabla \\phi_j\\nabla\\phi_i = \\int_\\Omega f \\phi_i$\r\n",
         "\r\n",
@@ -202,10 +202,25 @@
         "\r\n",
         "$\\vec{b}_i= \\int_\\Omega f\\phi_i$\r\n",
         "\r\n",
-        "$A_{ij} = \\int \\nabla \\phi_i\\nabla\\phi_j= \\int_0^1 \\phi_i'(x)\\phi_j'(x)dx= \\begin{cases}2/h & \\mbox{ if } i=j\\\\-1/h& \\mbox{ if } i = j\\pm 1\\\\ 0 & \\mbox{ else }\\end{cases}$\r\n",
+        "#### Stiffness matrix\r\n",
         "\r\n",
-        "#### Stiffness matrix\r\n"
+        "$A_{ij} = \\int \\nabla \\phi_i\\nabla\\phi_j= \\int_0^1 \\phi_i'(x)\\phi_j'(x)dx= \\begin{cases}\r\n",
+        "2/h & \\text{Хэрэв } \\quad i=j\\\\\r\n",
+        "-1/h& \\text{Хэрэв } \\quad i = j\\pm 1\\\\ \r\n",
+        "0 & \\text{ Бусад }\r\n",
+        "\\end{cases}$"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OgaRFerLmpAK"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
