--- a/Using_the_autograd_Library.ipynb
+++ b/Using_the_autograd_Library.ipynb
@@ -6,7 +6,7 @@
       "name": "Using the autograd Library.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZwtIL9mUbPfwhYGXleLd3"
+      "authorship_tag": "ABX9TyO5rZym+3Db/YQrpEyVJWXw"
     },
     "kernelspec": {
       "name": "python3",
@@ -52,7 +52,7 @@
         "# import statement for autograd wrapped numpy;\n",
         "import autograd.numpy as np;   "
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
         "def f(x):\n",
         "    return 2*x**3;"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
         "re_f = f(x);\n",
         "print(\"function result: \", re_f);"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
         "# create lambda function;\n",
         "f = lambda x: 2*x**3;"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
         "re_f = f(x);\n",
         "print(\"function result: \", re_f);"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
         "# import statment for gradient calculator;\n",
         "from autograd import grad;   "
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
         "dfdx = grad(f);\n",
         "print(dfdx);"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
         "x = 2;\n",
         "print(\"result of gradient f(x): \", dfdx(float(x)));"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +253,7 @@
         "dfdx2 = grad(dfdx);\n",
         "print(dfdx2);"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +279,7 @@
         "x = 3;\n",
         "print(\"result of gradient f(x): \", dfdx2(float(x)));"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,6 +288,17 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qLoDP1afjzZS"
+      },
+      "source": [
+        "### Нэмэлт, дэлгэрэнгүй\n",
+        "\n",
+        "[Энд дарна уу](http://www.cs.toronto.edu/~rgrosse/courses/csc321_2017/tutorials/tut4.pdf)"
       ]
     },
     {
